--- a/src/TaskTrack.Presentation/TaskTrack.Presentation.csproj
+++ b/src/TaskTrack.Presentation/TaskTrack.Presentation.csproj
@@ -8,7 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TaskTrackr.Application\TaskTrackr.Application.csproj" />
+    <ProjectReference Include="..\TaskTrackr.Infrastructure\TaskTrackr.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
